# master-thesis-code

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: baseline_1d_ae_latent16.yaml  baseline_1d_ae_v2_latent16.yaml  baseline_2d_ae.yaml  baseline_2d_ae_latent16.yaml  baseline_2d_ae_latent32.yaml  baseline_2d_ae_latent32_v2.yaml  baseline_2d_ae_latent64.yaml  baseline_2d_ae_latent8.yaml  baseline_2d_ae_latent8_v2.yaml  baseline_2d_ae_midscale.yaml  baseline_3d_ae_latent16.yaml  baseline_3d_fullbands_ae_latent4.yaml  baseline_3d_fullbands_ae_latent8.yaml  mamba_hsi_ae_midscale.yaml  pixelwise_spectral_mamba_ae_latent16.yaml  spectral_first_mamba_ae_latent8.yaml  spectral_first_mamba_ae_latent8_smoke.yaml  spectral_first_mamba_ae_latent96.yaml  tcn_hsi_ae.yaml  tcn_hsi_ae_midscale.yaml  tcn_hsi_ae_v2_midscale.yaml  tiny_ae.yaml
configs/baseline_1d/: baseline_1d_pixel_ae_latent16.yaml
configs/baseline_2d/: baseline_2d_ae_latent64.yaml  baseline_2d_ae_rd_lambda_0_01.yaml  baseline_2d_patch_ae_lic_latent16.yaml  baseline_2d_patch_ae_lic_rd_lambda_0_01.yaml  baseline_2d_rd_sweep.yaml
configs/baseline_3d/: baseline_3d_fullbands_ae_latent8.yaml  baseline_3d_patch_ae_latent16.yaml  baseline_3d_patch_ae_rd_lambda_0_01.yaml  hybrid_2d3d_ae_lic_latent16.yaml  hybrid_2d3d_ae_lic_rd_lambda_0_01.yaml
configs/mamba/: hierarchical_spectral_mamba_ae_k1_latent96.yaml  hierarchical_spectral_mamba_ae_k1_spatial_rd_lambda_0_01.yaml  hierarchical_spectral_mamba_ae_k4_no_spatial_latent96.yaml  hierarchical_spectral_mamba_ae_k4_spatial_rd_lambda_0_01.yaml  hierarchical_spectral_mamba_ae_latent96.yaml  hierarchical_spectral_mamba_ae_no_spatial_latent96.yaml  hierarchical_spectral_mamba_ae_stage1_recommended_latent96.yaml  pixelwise_spectral_mamba_ae_latent16.yaml  spectral_first_mamba_ae_v2_latent96.yaml  spectral_mamba_ae_latent96.yaml  spectral_mamba_ae_rd_lambda_0_01.yaml
notebooks/: hsi-eda.ipynb  hsi-first-loader.ipynb  requirements.txt
notes/: decisions.md  plan.md  results.md
scripts/: build_stats.py  check_normalization_subset.py  convert_tif_to_npy.py  copy-data-set-to-vm.sh  diagnose_speed.py  download_wandb_checkpoint.py  evaluate.py  inspect_ablation_controls.py  inspect_raw_sample.py  overfit_baseline.py  overfit_test.py  prepare-environment-on-vm.sh  run_hierarchical_mamba_rd_pilot.sh  run_rd_waterfall.sh  shutdown_vm.py  test_visualization.py  train.py  train_baseline.py  train_baseline_midscale.py
tests/: test_spectral_tcn_lossless.py
(+84 files in other folders)
