[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hsi-compression"
version = "0.1.0"
description = "Master thesis codebase for hyperspectral image compression"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "torch",
    "tifffile",
    "wandb",
    "python-dotenv",
    "tqdm",
    "pyyaml",
]

[project.scripts]
hsi-vm = "hsi_compression.vm_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]